# tune-llm

./: LoRA.md  README.md  pyproject.toml
datasets/: golden_indices.json  golden_medquad.jsonl  handwritten_eval_v1.jsonl  medquad_val_sft.jsonl  safety_probes_v1.jsonl
finetuned_outputs/smollm_135m_medquad_lora/: README.md
finetuned_outputs/smollm_135m_medquad_lora/checkpoint-1014/: rng_state.pth  scheduler.pt  trainer_state.json
finetuned_outputs/smollm_135m_medquad_lora/checkpoint-600/: README.md  adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
finetuned_outputs/smollm_135m_medquad_lora/checkpoint-900/: rng_state.pth  scheduler.pt  trainer_state.json
finetuned_outputs/smollm_135m_medquad_lora/final_adapter/: adapter_config.json
labelstudio/: handwritten_eval_v1_predictions.json  medquad_golden_predictions.json  medquad_val_predictions.json  safety_probes_v1_predictions.json
outputs/: handwritten_eval_v1_predictions.jsonl  medquad_golden_predictions.jsonl  medquad_val_predictions.jsonl  safety_probes_v1_predictions.jsonl  smollm_1_7B_base_on_golden.jsonl  smollm_1_7B_base_on_golden_summary.json  smollm_base_on_golden.jsonl  smollm_base_on_golden_summary.json
scripts/: eval_on_golden.sh  prepare_golden_data.sh  prepare_sft_data.sh  train_lora.sh  train_lora_sanity_check.sh  train_lora_smollm_1_7B.sh
src/: eval_on_golden.py  metrics.py  prepare_golden_dataset.py  prepare_sft_data.py  train_lora.py
src/evals/: eval_aggregate.py  eval_config.py  eval_datasets.py  eval_run.py  eval_score_manual.py  make_labelstudio_outputs.py
