[project]
name = "llm-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "bert-score>=0.3.13",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "hf-transfer>=0.1.9",
    "huggingface-hub[cli]>=0.36.0",
    "label-studio>=1.19.0",
    "nltk>=3.9.2",
    "peft>=0.18.0",
    "rouge-score>=0.1.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trl>=0.25.1",
]
